integration_tests/codegen_fail/fail/interface/impl_no_fields.rs.disabled
enum Character {}

juniper::graphql_interface!(Character: () where Scalar = <S> |&self| {
    field id() -> &str {
        match *self {
        }
    }

    instance_resolvers: |_| {}
});

fn main() {}
